@@ -47,6 +47,8 @@
 31. Only show icons in message widget buttons if style uses icons for dialog
     buttons.
 32. Add option to have separate play queue search action.
+33. Revert back to storing scaled covers as JPG. PNG is taking too much space,
+    especially with retina displays.
 
 1.4.2
 -----
